fix: restore spacing by removing global reset and adding m-0 to card components

--- a/src/style.css
+++ b/src/style.css
@@ -16,16 +16,6 @@
 
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-ul, ol {
-  list-style: none;
-}
-
-h1, h2, h3, h4, h5, h6, p {
-  margin: 0;
 }
 
 html {
